--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/logo_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.LNP"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".activity.PanStatusActivity"
             android:exported="false" />
@@ -26,9 +27,6 @@
             android:exported="false" />
         <activity
             android:name=".activity.AdminRetailerVerification"
-            android:exported="false" />
-        <activity
-            android:name=".ViewBBPSActivity"
             android:exported="false" />
         <activity
             android:name=".activity.FundRequestActivity"
