--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,35 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/logo_icon"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/logo_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.LNP"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:targetApi="31">
+        <activity
+            android:name=".activity.WebsiteWebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.WebsiteViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.WebsiteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.RetailerConfigActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.CommisionUserSearch"
+            android:exported="false" />
+        <activity
+            android:name=".activity.FundRequestUtilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.AllFundRequest"
+            android:exported="false" />
+        <activity
+            android:name=".activity.FundRequestApproval"
+            android:exported="false" />
         <activity
             android:name=".activity.PanStatusActivity"
             android:exported="false" />
